tried 'hot' settings from this SO post: http://stackoverflow.com/questions/29722755/webpack-dev-server-does-not-watch-for-my-file-changes

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --content-base ./ --port 9966 --hot",
     "production": "webpack -p"
   },
   "author": "John Hilts <johnhilts@live.com>",
