--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "John Hilts <johnhilts@live.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.11.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-router": "^2.4.0"
